# cs5228-repo

./: README.md  main.py  pyproject.toml
Coursework1/: CW1-Q1-1.ipynb  CW1-Q1-2.ipynb  CW1-Q2.ipynb  CW1-Q3-MCQ.ipynb  a1-kmeans-toy-data.csv  census-94-1.csv  census-94-description.txt  cw1-mcq1.csv  cw1-template.ipynb  result1-1.csv  result1-2.csv  result1-3.csv
Coursework2/: CW2-1.ipynb  CW2-2.ipynb  CW2_MCQ_Explanations.md  analyze_housing.py  cars3.csv  check_cw2_5.py  cs5228-Housing.csv  cw2-q4.csv  cw2-template.ipynb  find_best_rf.py  find_best_rf_refined.py  solve_cw2.py
Coursework3/: CW3.ipynb  CW3_MCQ.md  cw3-template.ipynb  facebook_combined.csv  names.csv
Tutorial1/: celebs1-bad-25.csv  preprocessing-25-1.ipynb
